# pydataknot

./: pyproject.toml
src/pydataknot/: feature_selection.py  optimize_classifier.py  train_classifier.py  utils.py
src/pydataknot/config/: __init__.py
tests/: test_train_classifier.py
tests/data/: snare_headrim_dataset.json
