[project]
name = "pydataknot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flucoma-torch>=0.1.2",
]

[project.scripts]
pydk-train-classifier = "pydataknot:train_classifier.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
