[project]
name = "pydataknot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flucoma-torch>=0.1.3",
]

[project.scripts]
pydk-train = "pydataknot:train_classifier.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.3.0",
    "pyfakefs>=5.9.3",
    "pytest-mock>=3.15.1",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
